manifest/corewebapi-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations: {}
  name: __CI_PROJECT_NAME__-ingress-__CI_PIPELINE_ID__
  namespace: gitlabci01
spec:
  backend:
    serviceName: __CI_PROJECT_NAME__-__CI_PIPELINE_ID__
    servicePort: 80
  http: 
  rules:
  - host: site-__CI_PIPELINE_ID__.devops.local
